fixed links in card components and made card background blurred

--- a/stylesheets/components/_content-card.scss
+++ b/stylesheets/components/_content-card.scss
@@ -51,6 +51,7 @@
     }
   }
   .bottom-part {
+    backdrop-filter: blur(3px);
     background-color: rgba(221, 97, 74, 0.25);
     padding: 10px;
     border-top: 1px solid white;
@@ -64,10 +65,7 @@
     color: $layer-1;
   }
   &:hover .image-content>img {
-    filter: blur(5px);
-  }
-  &:hover .bottom-part {
-    backdrop-filter: blur(3px);
+    filter: blur(3px);
   }
 }
 
@@ -79,7 +77,6 @@
 
 // For desktop
 @media only screen and (min-width: 1000px) {
-
   .card {
     width: 320px;
     font-size: 0.5em;
