--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -458,6 +458,8 @@ main section div h1 {
      object-fit: cover;
 }
 .card .bottom-part {
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   background-color: rgba(221, 97, 74, 0.25);
   padding: 10px;
   border-top: 1px solid white;
@@ -471,11 +473,7 @@ main section div h1 {
   color: rgb(221, 97, 74);
 }
 .card:hover .image-content > img {
-  filter: blur(5px);
-}
-.card:hover .bottom-part {
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
+  filter: blur(3px);
 }
 
 @media only screen and (min-width: 1000px) {
